--- a/angular.json
+++ b/angular.json
@@ -103,7 +103,7 @@
         "deploy": {
           "builder": "angular-cli-ghpages:deploy",
           "options": {
-            "baseHref": "/taskapp/"
+            "baseHref": "/basic-todo-app/"
           }
         }
       }
